// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mounts with custom props passes in custom flatlist props 1`] = `
<RCTScrollView
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  data={
    Array [
      Object {
        "content": "esse repellat quisquam",
        "contentUpdatedAt": "2020-01-13T13:58:47.783Z",
        "createdAt": "2010-09-19T03:58:30.504Z",
        "feedItem": Object {
          "community": Object {
            "id": "4",
            "name": "Digitized fault-tolerant focus group",
          },
          "id": "3",
        },
        "id": "1",
        "person": Object {
          "fullName": "Branson Gutkowski",
          "id": "2",
          "picture": "repellat ratione ut",
        },
      },
      Object {
        "content": "libero qui recusandae",
        "contentUpdatedAt": "2011-07-30T23:09:48.676Z",
        "createdAt": "2014-08-26T07:39:14.970Z",
        "feedItem": Object {
          "community": Object {
            "id": "8",
            "name": "Enhanced 3rd generation internet solution",
          },
          "id": "7",
        },
        "id": "5",
        "person": Object {
          "fullName": "Heather Hahn",
          "id": "6",
          "picture": "nobis cupiditate sed",
        },
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  listHeaderComponent={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 30,
            "paddingVertical": 8,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "repellat ratione ut",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              Object {
                "backgroundColor": "rgb(161, 161, 152)",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="NameButton"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "paddingRight": 6,
                      },
                    ]
                  }
                >
                  Branson Gutkowski
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {},
                  ],
                ]
              }
              testID="Text"
            >
              September 19, 2010 @ 3:58 AM
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {
                      "paddingHorizontal": 2,
                    },
                  ],
                ]
              }
            >
               • 
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Edited
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="popupMenuButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#ECEEF2",
                    "borderRadius": 8,
                    "marginVertical": 5,
                    "paddingHorizontal": 13,
                    "paddingVertical": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {},
                  ]
                }
              >
                esse repellat quisquam
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 30,
            "paddingVertical": 8,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "nobis cupiditate sed",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              Object {
                "backgroundColor": "rgb(251, 161, 115)",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="NameButton"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "paddingRight": 6,
                      },
                    ]
                  }
                >
                  Heather Hahn
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {},
                  ],
                ]
              }
              testID="Text"
            >
              August 26, 2014 @ 7:39 AM
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {
                      "paddingHorizontal": 2,
                    },
                  ],
                ]
              }
            >
               • 
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Edited
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="popupMenuButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#ECEEF2",
                    "borderRadius": 8,
                    "marginVertical": 5,
                    "paddingHorizontal": 13,
                    "paddingVertical": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {},
                  ]
                }
              >
                libero qui recusandae
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`with comments with next page renders correctly 1`] = `
<RCTScrollView
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  data={
    Array [
      Object {
        "content": "esse repellat quisquam",
        "contentUpdatedAt": "2020-01-13T13:58:47.783Z",
        "createdAt": "2010-09-19T03:58:30.504Z",
        "feedItem": Object {
          "community": Object {
            "id": "4",
            "name": "Digitized fault-tolerant focus group",
          },
          "id": "3",
        },
        "id": "1",
        "person": Object {
          "fullName": "Branson Gutkowski",
          "id": "2",
          "picture": "repellat ratione ut",
        },
      },
      Object {
        "content": "libero qui recusandae",
        "contentUpdatedAt": "2011-07-30T23:09:48.676Z",
        "createdAt": "2014-08-26T07:39:14.970Z",
        "feedItem": Object {
          "community": Object {
            "id": "8",
            "name": "Enhanced 3rd generation internet solution",
          },
          "id": "7",
        },
        "id": "5",
        "person": Object {
          "fullName": "Heather Hahn",
          "id": "6",
          "picture": "nobis cupiditate sed",
        },
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 30,
            "paddingVertical": 8,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "repellat ratione ut",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              Object {
                "backgroundColor": "rgb(161, 161, 152)",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="NameButton"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "paddingRight": 6,
                      },
                    ]
                  }
                >
                  Branson Gutkowski
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {},
                  ],
                ]
              }
              testID="Text"
            >
              September 19, 2010 @ 3:58 AM
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {
                      "paddingHorizontal": 2,
                    },
                  ],
                ]
              }
            >
               • 
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Edited
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="popupMenuButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#ECEEF2",
                    "borderRadius": 8,
                    "marginVertical": 5,
                    "paddingHorizontal": 13,
                    "paddingVertical": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {},
                  ]
                }
              >
                esse repellat quisquam
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 30,
            "paddingVertical": 8,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "nobis cupiditate sed",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              Object {
                "backgroundColor": "rgb(251, 161, 115)",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="NameButton"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "paddingRight": 6,
                      },
                    ]
                  }
                >
                  Heather Hahn
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {},
                  ],
                ]
              }
              testID="Text"
            >
              August 26, 2014 @ 7:39 AM
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {
                      "paddingHorizontal": 2,
                    },
                  ],
                ]
              }
            >
               • 
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Edited
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="popupMenuButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#ECEEF2",
                    "borderRadius": 8,
                    "marginVertical": 5,
                    "paddingHorizontal": 13,
                    "paddingVertical": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {},
                  ]
                }
              >
                libero qui recusandae
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`with comments with next page without next page renders correctly 1`] = `
<RCTScrollView
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  data={
    Array [
      Object {
        "content": "esse repellat quisquam",
        "contentUpdatedAt": "2020-01-13T13:58:47.783Z",
        "createdAt": "2010-09-19T03:58:30.504Z",
        "feedItem": Object {
          "community": Object {
            "id": "4",
            "name": "Digitized fault-tolerant focus group",
          },
          "id": "3",
        },
        "id": "1",
        "person": Object {
          "fullName": "Branson Gutkowski",
          "id": "2",
          "picture": "repellat ratione ut",
        },
      },
      Object {
        "content": "libero qui recusandae",
        "contentUpdatedAt": "2011-07-30T23:09:48.676Z",
        "createdAt": "2014-08-26T07:39:14.970Z",
        "feedItem": Object {
          "community": Object {
            "id": "8",
            "name": "Enhanced 3rd generation internet solution",
          },
          "id": "7",
        },
        "id": "5",
        "person": Object {
          "fullName": "Heather Hahn",
          "id": "6",
          "picture": "nobis cupiditate sed",
        },
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 30,
            "paddingVertical": 8,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "repellat ratione ut",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              Object {
                "backgroundColor": "rgb(161, 161, 152)",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="NameButton"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "paddingRight": 6,
                      },
                    ]
                  }
                >
                  Branson Gutkowski
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {},
                  ],
                ]
              }
              testID="Text"
            >
              September 19, 2010 @ 3:58 AM
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {
                      "paddingHorizontal": 2,
                    },
                  ],
                ]
              }
            >
               • 
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Edited
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="popupMenuButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#ECEEF2",
                    "borderRadius": 8,
                    "marginVertical": 5,
                    "paddingHorizontal": 13,
                    "paddingVertical": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {},
                  ]
                }
              >
                esse repellat quisquam
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 30,
            "paddingVertical": 8,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "nobis cupiditate sed",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              Object {
                "backgroundColor": "rgb(251, 161, 115)",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="NameButton"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "paddingRight": 6,
                      },
                    ]
                  }
                >
                  Heather Hahn
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {},
                  ],
                ]
              }
              testID="Text"
            >
              August 26, 2014 @ 7:39 AM
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "fontSize": 12,
                    },
                    Object {
                      "paddingHorizontal": 2,
                    },
                  ],
                ]
              }
            >
               • 
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#B2B0B2",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Edited
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="popupMenuButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#ECEEF2",
                    "borderRadius": 8,
                    "marginVertical": 5,
                    "paddingHorizontal": 13,
                    "paddingVertical": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {},
                  ]
                }
              >
                libero qui recusandae
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`with no comments renders correctly 1`] = `
<RCTScrollView
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View />
</RCTScrollView>
`;
